MPL/test/MplPasses/TypeChecker/cases/kindcheck/positive/1.mpl
data 
    Test(A) -> C =
        Testt :: A,A,A -> C
        Testtt :: A -> C
