MPL/test/MplPasses/TypeChecker/cases/kindcheck/negativehigherkindedtype/5.mpl
data 
    Test(A,B) -> C =
        Testtt :: TopBot -> C
